# backend/internal/infra/http/http.go
@@ -1,8 +1,15 @@
 package http
 
 import (
+	"log/slog"
+	"os"
+
+	"github.com/ThreeDotsLabs/watermill"
+	"github.com/ThreeDotsLabs/watermill-http/v2/pkg/http"
+	"github.com/gofiber/fiber/v2/middleware/adaptor"
 	"github.com/supallm/core/internal/application"
-	http "github.com/supallm/core/internal/infra/http/gen"
+	"github.com/supallm/core/internal/application/event"
+	"github.com/supallm/core/internal/infra/http/gen"
 	"github.com/supallm/core/internal/pkg/server"
 )
 
@@ -17,11 +24,30 @@ func NewServer(mux *server.Server, app *application.App) {
 		app:    app,
 	}
 
-	// Register API handlers with Clerk authentication
-	http.RegisterHandlersWithOptions(mux.App, s, http.FiberServerOptions{
+	s.listenWorkflowTrigger()
+	gen.RegisterHandlersWithOptions(mux.App, s, gen.FiberServerOptions{
 		BaseURL: "",
-		Middlewares: []http.MiddlewareFunc{
+		Middlewares: []gen.MiddlewareFunc{
 			s.server.ClerkAuthMiddleware(),
 		},
 	})
+}
+
+func (s *Server) listenWorkflowTrigger() {
+	logger := watermill.NewSlogLogger(nil)
+	sseRouter, err := http.NewSSERouter(
+		http.SSERouterConfig{
+			UpstreamSubscriber: s.app.Subscriber,
+			ErrorHandler:       http.DefaultErrorHandler,
+			Marshaler:          workflowSSEMarshaller{},
+		},
+		logger,
+	)
+	if err != nil {
+		slog.Error("error creating sse router", "error", err)
+		os.Exit(1)
+	}
+
+	sseHandler := sseRouter.AddHandler(event.TopicWorkflowEventsOut, workflowSSEAdapter{})
+	s.server.App.Get("/projects/:projectId/workflows/:workflowId/listen/:triggerId", adaptor.HTTPHandler(sseHandler))
 }
